--- a/confirm.html
+++ b/confirm.html
@@ -16,7 +16,7 @@
 
         <p>Congratulations. you are secret santa for someone. Wait for next instructions on your email! if you need some help with choosing a gift, you may read this article.</p>
 
-        <button class="disabled-btn" disabled>You are registered</button>
+        <button class="disabled-btn" onclick="window.location.href='index.html'">Back</button>
 
         <img src="img/img1.svg" alt="leafs" class="leafs" />
 
