--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="section1">
       <!-- <div id="play-pause-button"> <img src="img/pause.svg" class="pause" alt="play-pause"> <span> Pause </span></div> -->
       
-      <audio src="audio.mp3" autoplay id="audio-player"></audio>
+      <audio src="audio.mp3" autoplay="true" id="audio-player"></audio>
 
       <button id="audio-ctrl">
         <img src="img/pause.svg" alt="" id="audio-btn">
@@ -84,7 +84,7 @@
         <button class="close-btn" type="button">close</button>
       </form>
 
-      <button class="participate-btn">Participate</button>
+      <button class="participate-btn" onclick="player()">Participate</button>
 
       <img src="img/img1.svg" alt="leafs" class="leafs" />
 
