--- a/confirm.html
+++ b/confirm.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body style="margin: 0; background: #fff; overflow: hidden;">
+<body style="margin: 0; overflow: hidden;">
     <section class="section1">
         <img src="img/logo.svg" alt="logo" class="logo" />
 
