fixed read article

--- a/confirm.html
+++ b/confirm.html
@@ -14,7 +14,7 @@
     <section class="section1">
         <img src="img/logo.svg" alt="logo" class="logo" />
 
-        <p>Congratulations. you are secret santa for someone. Wait for next instructions on your email! if you need some help with choosing a gift, you may read this article.</p>
+        <p>Congratulations. you are secret santa for someone. Wait for next instructions on your email! if you need some help with choosing a gift, you may <a href="https://www.wikihow.com/Choose-a-Gift-for-Your-Friends" class="article-link" target="_blank"> <b> read this article.</b> </a> </p>
 
         <button class="disabled-btn" onclick="window.location.href='index.html'">Back</button>
 
@@ -33,7 +33,6 @@
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow1" />
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow2" />
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow3" />
-        <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow4" />
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow5" />
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow6" />
         <img src="img/img4.svg" alt="star" class="img-anim snow-anim snow7" />
